--- a/_ondemand/43216f3592f37d744f7d544614a2f997a5739641/index.html
+++ b/_ondemand/43216f3592f37d744f7d544614a2f997a5739641/index.html
@@ -6,6 +6,9 @@ title: On Demand
 <!-- This page will automatically update for markdown pages that have been creted.  The mapping of modules to page names 
 is located in _data/ondemand.yml -->
 
+<p>
+  <a href="./backend">Backend</a>
+</p>
 
 <div style="display: grid; grid-template-columns: 1fr 1fr; grid-gap: 20px;">
 
@@ -20,7 +23,7 @@ is located in _data/ondemand.yml -->
       <li><a href="pathways/{{ pathway.slug }}">{{ pathway.title }}</a></li>
 
       {% else %}
-      <li>{{ pathway.title | append: " (Coming Soon!)"}}</li>
+      <li>{{ pathway.title | append: "- Coming Soon!" }}</li>
       {% endif %}
 
       {% endfor %}
@@ -39,7 +42,11 @@ is located in _data/ondemand.yml -->
       {% assign mod = module[1] %}
       {% assign moduleslug = mod.slug %}
 
-      <li> <a href="{{ mod.slug }}/{{ mod.pages[0].slug }}"> {{ mod.name }} </a> </li>
+      {% if mod.live == true %}
+        <li> <a href="{{ moduleslug }}/{{ mod.pages[0].slug }}"> {{ mod.name }} </a> </li>
+      {% else %}
+        <li> {{ mod.name | append: "- Coming Soon!" }} </li>
+      {% endif %}
 
       {% endfor %}
 
