--- a/_lessons/case-study.html
+++ b/_lessons/case-study.html
@@ -1,10 +1,10 @@
 ---
 layout: presentation
-title: Group case study
+title: Case study
 ---
 
 class: title, center, middle
-# Group case study
+# Case study
 
 ---
 
@@ -60,5 +60,3 @@ select * from raw.learn_stripe.refunds;
 ```
 
 Time is limited — if you can't get something done in time, jot it down as a "to do" somewhere.
-
-{% include options/last_slide.html %}
