--- a/_lessons/dbt-project-design.html
+++ b/_lessons/dbt-project-design.html
@@ -57,7 +57,7 @@ With dbt!
 
 ---
 
-class: title, center, middle
+class: subtitle, center, middle
 # 1. Final data artifacts
 
 ### They matter, but you don't need to get them right on the first try
@@ -102,7 +102,8 @@ implementation strategies are still applicable.
 .left-column[
 ### Given
 
-- The technology we use is _powerful_. This isn't Kimball's database.
+- The technology we use is _powerful_. This isn't Kimball's database. You can normalize
+or denormalize if you want to.
 - Designing and naming things for human intuition is _hard_. You won't get
 it right the first time, every time.
 - You're building a data product; you're not a data service provider. 
