--- a/_lessons/deployment.html
+++ b/_lessons/deployment.html
@@ -173,4 +173,4 @@ You should be able to:
 - List some options for deploying your dbt project
 - Deploy your dbt project with dbt Cloud
 
-{% include options/last_slide.html %}
+{% include options/last_slide_of_day.html %}
