--- a/_lessons/intro-to-jinja.html
+++ b/_lessons/intro-to-jinja.html
@@ -307,25 +307,7 @@ I want a table like this:
 .denser-text[
 How do I do this in SQL?
 ]
----
-class: subtitle
 
-# Working session
-
-**Challenge:** Use SQL + Jinja to "pivot" the payments data.
-
-.denser-text[
-
-1. **As a class**: write this in pure SQL
-2. **As a class**: use _some_ Jinja + SQL
-3. **In your breakout groups**:
-* Refactor!
-* Each breakout group will have a Teacher's Assistant
-* Let us know in Slack when you have finished refactoring
-
-**As a class**: one person from each breakout group will present their solution
-
-]
 ???
 
 ```sql
@@ -373,6 +355,34 @@ group by 1
 select * from aggregated
 ```
 
+---
+class: subtitle
+
+# Working session
+
+**Challenge:** Use SQL + Jinja to "pivot" the payments data.
+
+.denser-text[
+
+1. **As a class**: write this in pure SQL
+2. **As a class**: use _some_ Jinja + SQL
+3. **In your breakout groups**:
+* Refactor!
+* Each breakout group will have a Teacher's Assistant
+* Let us know in Slack when you have finished refactoring
+
+**As a class**: one person from each breakout group will present their solution.
+We'll discuss the pros and cons of each approach.
+
+]
+
+???
+
+| approach | pros | cons |
+|-|-|-|
+| custom jinja | dynamic, automated | liable to break, difficult to comprehend |
+| utils macro | dynamic, automated, modular | even harder to debug when it breaks |
+| accepted-values test | clear, concise, observable | manual updates |
 
 {% endraw %}
 
