add videos and pages for Analytics Engineer and Set up cloud

--- a/_lessons/thumbnails.html
+++ b/_lessons/thumbnails.html
@@ -1,40 +1,24 @@
 ---
 layout: presentation
 title: Testing
-estimated_teaching_time: 30
-teaching_method: live demo + slides. Questions encouraged.
-working_session: true
-learningObjectives:
-  - Explain the role of tests in an analytics workflow
-  - Add tests to your models
-  - Run tests on your models
-  - Build intuition for why tests fail and what to test
 
 ---
 class: title, center, middle
 
-# .thumbnail-white[What is an analytics engineer?]
+# .thumbnail-white[Set up dbt Cloud]
 
-## .thumbnail-orange[Traditional Data Teams]
-
----
-class: title, center, middle
-
-# .thumbnail-white[What is an analytics engineer?]
-
-## .thumbnail-orange[ETL and ELT]
+## .thumbnail-orange[Connect to GitHub]
 
 ---
 class: title, center, middle
 
-# .thumbnail-white[What is an analytics engineer?]
+# .thumbnail-white[Set up dbt Cloud]
 
-## .thumbnail-orange[Analytics Engineer]
+## .thumbnail-orange[Connect to Warehouse and Repository]
 
 ---
 class: title, center, middle
 
-# .thumbnail-white[What is an analytics engineer?]
+# .thumbnail-white[Set up dbt Cloud]
 
-## .thumbnail-orange[data build tool]
-
+## .thumbnail-orange[Cloud IDE Overview]
