rest of updates

--- a/_lessons/dbt-project-design.html
+++ b/_lessons/dbt-project-design.html
@@ -171,11 +171,11 @@ and benefit from data—your product—more than any one table or dashboard.
 
 # Interface #1: The Graph
 
-"Where are those sales numbers coming from?"
+"Where are those sales numbers coming from?" &rarr; _Which data sources, processes, and assumptions do our sales calculations depend on?_
 
-_Which data sources, processes, and assumptions do our sales calculations depend on?_
+The DAG tells the story:
 
-The DAG tells a story:
+<img src="/ui/img{{page.id}}/dag-simple.png" style="width: 80%;" class="img-center">
 
 <h3 style="text-align: center;"><span style="color: green;">Source</span>
 &rarr;
