--- a/_lessons/intro-to-jinja.html
+++ b/_lessons/intro-to-jinja.html
@@ -26,7 +26,7 @@ written python, and even if you haven't.
 .left-column[
 Other templating engines:
 * Nunjucks (JavaScript, Jinja-inspired)
-* Liquid (Ruby)
+* Liquid (Ruby)<sup>1</sup>
 ]
 
 .right-column[
@@ -38,6 +38,8 @@ Applications that use Jinja:
 ]
 
 [_Read the Jinja docs_](https://jinja.palletsprojects.com/en/2.11.x/)
+
+.caption[<sup>1</sup>Used to template these slides!]
 
 {% endraw %}
 <!-- endraw to render focus slide -->
