Hotfix deployment list

--- a/_lessons/deployment.html
+++ b/_lessons/deployment.html
@@ -71,11 +71,11 @@ _(Obviously we're biased)_
 
 The scheduler in dbt Cloud is purpose built for running dbt jobs on a schedule.
 
-✅ Always pulls the latest version of your project
-✅ Easy to build on Pull Request (and tear down the schema afterwards)
-✅ Easy to generate and share documentation with users
-✅ Secure access model
-✅ Email and Slack notifications if something goes wrong, with rich logs
+- ✅ Always pulls the latest version of your project
+- ✅ Easy to build on Pull Request (and tear down the schema afterwards)
+- ✅ Easy to generate and share documentation with users
+- ✅ Secure access model
+- ✅ Email and Slack notifications if something goes wrong, with rich logs
 
 
 ---
