Fixup to hotfix

--- a/_lessons/outro.html
+++ b/_lessons/outro.html
@@ -45,4 +45,4 @@ class: title, center, middle
 
 # Certificates 🏅
 
-Please email [kcoapman@fishtownanalytics.com](mailto:kcoapman@fishtownanalytics.com] with your mailing address if you would like us to mail you a certificate.
+Please email [kcoapman@fishtownanalytics.com](mailto:kcoapman@fishtownanalytics.com) with your mailing address if you would like us to mail you a certificate.
