update all videos to Wistia, build out new models module

--- a/_lessons/thumbnails.html
+++ b/_lessons/thumbnails.html
@@ -5,20 +5,49 @@ title: Testing
 ---
 class: title, center, middle
 
-# .thumbnail-white[Set up dbt Cloud]
+# .thumbnail-white[Models]
 
-## .thumbnail-orange[Connect to GitHub]
-
----
-class: title, center, middle
-
-# .thumbnail-white[Set up dbt Cloud]
-
-## .thumbnail-orange[Connect to Warehouse and Repository]
+## .thumbnail-orange[What are models?]
 
 ---
 class: title, center, middle
 
-# .thumbnail-white[Set up dbt Cloud]
+# .thumbnail-white[Models]
 
-## .thumbnail-orange[Cloud IDE Overview]
+## .thumbnail-orange[Building your first model]
+
+---
+class: title, center, middle
+
+# .thumbnail-white[Models]
+
+## .thumbnail-orange[What is modularity?]
+
+---
+class: title, center, middle
+
+# .thumbnail-white[Models]
+
+## .thumbnail-orange[Refactor with Modularity]
+
+---
+class: title, center, middle
+
+# .thumbnail-white[Models]
+
+## .thumbnail-orange[Data Modeling History]
+
+---
+class: title, center, middle
+
+# .thumbnail-white[Models]
+
+## .thumbnail-orange[Naming Models]
+
+---
+class: title, center, middle
+
+# .thumbnail-white[Models]
+
+## .thumbnail-orange[Reorganizing our Project]
+
