--- a/_lessons/thumbnails.html
+++ b/_lessons/thumbnails.html
@@ -5,49 +5,27 @@ title: Testing
 ---
 class: title, center, middle
 
-# .thumbnail-white[Models]
+# .thumbnail-white[Tests]
 
-## .thumbnail-orange[What are models?]
-
----
-class: title, center, middle
-
-# .thumbnail-white[Models]
-
-## .thumbnail-orange[Building your first model]
+## .thumbnail-orange[Why is testing important?]
 
 ---
 class: title, center, middle
 
-# .thumbnail-white[Models]
+# .thumbnail-white[Tests]
 
-## .thumbnail-orange[What is modularity?]
-
----
-class: title, center, middle
-
-# .thumbnail-white[Models]
-
-## .thumbnail-orange[Refactor with Modularity]
+## .thumbnail-orange[What is testing?]
 
 ---
 class: title, center, middle
 
-# .thumbnail-white[Models]
+# .thumbnail-white[Tests]
 
-## .thumbnail-orange[Data Modeling History]
-
----
-class: title, center, middle
-
-# .thumbnail-white[Models]
-
-## .thumbnail-orange[Naming Models]
+## .thumbnail-orange[Schema Tests]
 
 ---
 class: title, center, middle
 
-# .thumbnail-white[Models]
+# .thumbnail-white[Tests]
 
-## .thumbnail-orange[Reorganizing our Project]
-
+## .thumbnail-orange[Data Tests]
