--- a/_ondemand/43216f3592f37d744f7d544614a2f997a5739641/index.html
+++ b/_ondemand/43216f3592f37d744f7d544614a2f997a5739641/index.html
@@ -1,49 +1,58 @@
 ---
-layout: overview
+layout: ondemand-overview
 title: On Demand
 ---
+
+<style>
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 150px;
+    grid-gap: 10px;
+    align-items: stretch;
+  }
+  
+  .grid-item {
+    padding: 10px 10px;
+    border: 1px silver solid;
+    font-size: 1em;
+    border-radius: 3px;
+    background-color: #f0f2f4;
+    color: #00475c;
+    display: inline-flexbox;
+    align-items: center;
+    justify-content: left;
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+      margin: 20px 0 ;
+    }
+
+  p {
+    margin: 0 0;
+  }
+
+</style>
+
 
 <!-- This page will automatically update for markdown pages that have been creted.  The mapping of modules to page names 
 is located in _data/ondemand.yml -->
 
-<div style="display: grid; grid-template-columns: 1fr 1fr; grid-gap: 20px;">
+<h1>dbt Learn on demand</h1>
+<h6 style="color: #ff694b">Choose how you want to Learn</h6>
 
-  <div>
-    <h1>Pathways</h1>
-    <h6 style="color: #ff694b">Follow a curated sequence of modules</h6>
-    <ul>
+<div class="grid-container ">
+  <a href="{{baseurl}}/ondemand/{{ site.onDemandHash }}/pathway" class="grid-item">
+    <strong>Pathway</strong>
+    <p>Follow a curated sequence of lessons</p>
+</a>
 
-      {% for pathway in site.data.ondemand.pathways %}
+  <a href="{{baseurl}}/ondemand/{{ site.onDemandHash }}/modules" class="grid-item">
+    <strong>Modules</strong>
+    <p>Choose a topic to learn right now</p>
+</a>
 
-      {% if pathway.live == true %}
-      <li><a href="pathways/{{ pathway.slug }}">{{ pathway.title }}</a></li>
 
-      {% else %}
-      <li>{{ pathway.title | append: "  🏗" }}</li>
-      {% endif %}
-
-      {% endfor %}
-
-    </ul>
-  </div>
-
-  <div>
-    <h1>Modules</h1>
-    <h6 style="color: #ff694b">Choose a topic to learn right now</h6>
-    <ul>
-
-      {% for module in site.data.ondemand.modules %}
-      {% assign mod = module[1] %}
-      {% assign moduleslug = mod.slug %}
-
-      {% if mod.live == true %}
-        <li> <a href="{{ moduleslug }}/{{ mod.pages[0].slug }}"> {{ mod.name }} </a> </li>
-      {% else %}
-        <li> {{ mod.name | append: "  🏗"  }} </li>
-      {% endif %}
-
-      {% endfor %}
-
-    </ul>
-  </div>
 </div>
+
