hotfix/dbt-project-design (#100)

--- a/_lessons/dbt-project-design.html
+++ b/_lessons/dbt-project-design.html
@@ -533,7 +533,7 @@ matter if you prefer `fct_` or `fact_`, it's important that you choose one. (Wha
 Every model/object name is snake case + case insensitive.)
 ---
 1. .grey[**Nomenclature.**]
-2. **Public vs. Private.** Internal Prefixed models represent external/usable assets. Double underscores represent internal/intermediate assets.
+2. **Public vs. Private.** Prefixed models with single underscores represent external/usable assets.  Double underscores represent internal/intermediate assets.
 ---
 1. .grey[**Nomenclature.**]
 2. .grey[**Public vs. Private.**]
