update live modules

--- a/_ondemand/43216f3592f37d744f7d544614a2f997a5739641/modules.html
+++ b/_ondemand/43216f3592f37d744f7d544614a2f997a5739641/modules.html
@@ -47,8 +47,8 @@ title: Modules
 
       </a>
       {% else %}
-      <div class="grid-item">
-         {{ mod.name | append: "  🏗"  }}
+      <div class="grid-item" style="color: gray">
+         {{ mod.name | prepend: "🏗    "  }}
       </div>
       {% endif %}
 
