--- a/_ondemand/43216f3592f37d744f7d544614a2f997a5739641/pathway.html
+++ b/_ondemand/43216f3592f37d744f7d544614a2f997a5739641/pathway.html
@@ -48,8 +48,8 @@ title: Pathway
                       {{ module.name }}
                     </a>
             {% else %}
-            <div>
-            {{ module.name | append: "  🏗"  }}
+            <div class="grid-item" style="color: gray">
+            {{ module.name | prepend: " 🏗"  }}
             </div>        
             {% endif %}
 
