--- a/_lessons/thumbnails.html
+++ b/_lessons/thumbnails.html
@@ -5,27 +5,27 @@ title: Testing
 ---
 class: title, center, middle
 
-# .thumbnail-white[Tests]
+# .thumbnail-white[Sources]
 
-## .thumbnail-orange[Why is testing important?]
-
----
-class: title, center, middle
-
-# .thumbnail-white[Tests]
-
-## .thumbnail-orange[What is testing?]
+## .thumbnail-orange[What are sources?]
 
 ---
 class: title, center, middle
 
-# .thumbnail-white[Tests]
+# .thumbnail-white[Sources]
 
-## .thumbnail-orange[Schema Tests]
+## .thumbnail-orange[Configuring and Selecting from Sources]
 
 ---
 class: title, center, middle
 
-# .thumbnail-white[Tests]
+# .thumbnail-white[Sources]
 
-## .thumbnail-orange[Data Tests]
+## .thumbnail-orange[Documenting and Testing Sources]
+
+---
+class: title, center, middle
+
+# .thumbnail-white[Sources]
+
+## .thumbnail-orange[Snapshot Freshness]
