--- a/_lessons/thumbnails.html
+++ b/_lessons/thumbnails.html
@@ -12,9 +12,9 @@ class: title, center, middle
 ---
 class: title, center, middle
 
-# .thumbnail-white[Sources]
+# .thumbnail-white[Tests]
 
-## .thumbnail-orange[Configuring and Selecting from Sources]
+## .thumbnail-orange[What is testing?]
 
 ---
 class: title, center, middle
