send beta invites

--- a/etc/learn_setup/html_templates/beta_learn.html
+++ b/etc/learn_setup/html_templates/beta_learn.html
@@ -23,17 +23,23 @@
       <ol>
         <li>(2 minutes) Say hi in the #{{ slack_channel }} channel in dbt Slack (details below)</li>
         <li>(2 minutes) Login to Snowflake and dbt Cloud (details below)</li>
-        <li>(5 minutes) Watch my introduction video so that you know your way around the dbt Learn on demand site.</li>
+        <li>(5 minutes) Watch my <a href="https://dbtlearn.wistia.com/medias/a32gzz49cg">introduction video</a> so that you know your way around the dbt Learn on demand site.</li>
       </ol>
 
-      <p>If you have any questions at all, please reach out on Slack.  I’m looking forward to e-meeting you and learning together</p>
+      <p>My goal is to keep this in beta until around mid October.  Until we go fully public, please keep the access within only the people in the private channel in dbt slack.</p>
+
+      <p>You can access the beta <a href="https://learn.getdbt.com/ondemand/">here</a> and I will share the password directly with you on slack.</p>
+
+      <p>In terms of feedback, I have embedded Google Forms at the end of each module to make it really easy to share your feedback on the module while it is fresh on your mind.</p>
+
+      <p>If you have any questions at all, please reach out on Slack.  I’m looking forward to e-meeting you and learning together!!</p>
 
       <p>{{ instructor_first }}</p>
 
       <h2 style="border-bottom: 1px solid #CCC;
     display: block;">Details: dbt Slack</h2>
 
-      <p>I've created a private channel in dbt Slack for beta participants. {% if slack_status == 'added' %}I’ve already added you to the channel. {% else %}I wasn’t able to find you in Slack — if you are already a member, please DM me on Slack to ask me to add you to the channel. If you haven’t yet joined, you can sign up at <a href="https://community.getdbt.com">community.getdbt.com</a> — then find me ({{ instructor_slack }}) on Slack to ask to be added to the channel.{% endif %} We will be using this channel for communication, questions, and feedback.</p>
+      <p>I've created a private channel in dbt Slack for beta participants. {% if slack_status == 'added' %}I’ve already added you to the channel. {% else %}I wasn’t able to find you in Slack — if you are already a member, please DM me on Slack to ask me to add you to the channel. If you haven’t yet joined, you can sign up at <a href="https://community.getdbt.com">community.getdbt.com</a> — then find me ({{ instructor_slack }}) on Slack to ask to be added to the channel.{% endif %} We will be using this channel for communication, questions, and feedback.  See you over there!</p>
 
       <h2 style="border-bottom: 1px solid #CCC;
     display: block;">Details: Snowflake and dbt Cloud</h2>
@@ -58,9 +64,6 @@ password: ChangeMe123 (you'll be prompted to change this)
 
       <p><strong>dbt Cloud:</strong> You should have received an email from dbt Cloud with an invitation
         to join. Please open and accept the invite soon, as it expires after a few days.</p>
-
-      <p>If you run into any snags in the tutorial or have any other questions, please feel free to ask in the Slack channel mentioned above.</p>
-
     </div>
   </body>
 
