(temp) change all links to week 1 Google form

--- a/jumpstart/index.html
+++ b/jumpstart/index.html
@@ -3,9 +3,9 @@ layout: page
 title: Jumpstart - Welcome
 nav_included: true
 week1_form: https://forms.gle/vxsWkvSpxcjnKXmy5
-week2_form: twitter.com
-week3_form: linkedin.com
-week4_form: duckduckgo.com
+week2_form: https://forms.gle/vxsWkvSpxcjnKXmy5
+week3_form: https://forms.gle/vxsWkvSpxcjnKXmy5
+week4_form: https://forms.gle/vxsWkvSpxcjnKXmy5
 
 ---
 
