adjust copy, fix list tags

--- a/jumpstart/index.html
+++ b/jumpstart/index.html
@@ -100,13 +100,12 @@ week4_form: https://forms.gle/vxsWkvSpxcjnKXmy5
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <ul class="list-icons text-med text-heading text-left">
+                    <ul class="list-icons text-med text-heading text-left" style="color:#383838">
                         <li><span class="arrow-right text-blue text-medium list-icon"></span>This course is completed in a combination of asynchronous and synchronous sessions.</li>
-                        <li><span class="arrow-right text-blue text-medium list-icon"></span><strong>Asynchronous Sessions:</strong> Participants watch instructional videos online, complete Google form with check for understanding questions, and complete exercises in dbt at their own pace.  Instructional videos use the dbt Cloud interface for demonstrations.  The amount of time needed for each asynchronous session is about 2 hours (60 minutes of videos and 60 minutes for Google form and exercises)</li>
-                        <li><span class="arrow-right text-blue text-medium list-icon"></span><strong>Synchronous Sessions:</strong> A Fishtown Analytics team member facilitates a review of the exercises and answers questions that participants record during their asynchronous work.  Synchronous sessions will be hosted by Fishtown Analytics using Zoom for video conferencing.</li>
-                        <li><span class="arrow-right text-blue text-medium list-icon"></span>The course is implemented with Fishtown Analytics’ Training Snowflake account as the Data Warehouse and personal or client hosted Github repositories as the host for version control.  Participants will have access to the Fishtown Snowflake account for 45 days from the start of the Jumpstart course.</li>
-                        <li><span class="arrow-right text-blue text-medium list-icon"></span>Instructional videos are hosted online using Wistia on a Fishtown Analytics owned website.  These will be updated by the Fishtown Analytics team as dbt Cloud evolves but the client will have access to the videos indefinitely.</li>
-                        <li><span class="arrow-right text-blue text-medium list-icon"></span>Criteria for Success: Participants are expected to view 100% of videos and complete 100% of the Google Forms and exercises 24 hours prior to each office hours session.  This will ensure instructors can review the completed work and participants maximize their takeaways from the course.</li>
+                        <li><span class="arrow-right text-blue text-medium list-icon"></span><strong>Asynchronous Sessions (2 hours each week):</strong> Participants watch instructional videos online, complete Google form with check for understanding questions, and complete exercises in dbt at their own pace.  </li>
+                        <li><span class="arrow-right text-blue text-medium list-icon"></span><strong>Synchronous Sessions (1 hour each week):</strong> A Fishtown Analytics team member facilitates a review of the exercises and answers questions that participants record during their asynchronous work.</li>
+                        <li><span class="arrow-right text-blue text-medium list-icon"></span><strong>Infrastructure:</strong> The course is implemented with Fishtown Analytics’ Training Snowflake account as the Data Warehouse and personal or client hosted Github repositories as the host for version control.</li>
+                        <li><span class="arrow-right text-blue text-medium list-icon"></span><strong>Criteria for Success:</strong> Participants are expected to view 100% of videos and complete 100% of the Google Forms and exercises 24 hours prior to each office hours session.</li>
                     </ul>
                 </div>
             </div>
@@ -123,24 +122,28 @@ week4_form: https://forms.gle/vxsWkvSpxcjnKXmy5
 					<div class="text-contain">
 						<center><h3 class="h2" id="expectations">What to Expect</h3></center>
 						<p>
-                            <h4>Before the Kickoff</h4>
-                                <li>Add your information to the introductions slides</li>
-                                <li>Join the private Jumpstart slack channel in dbt Slack</li>
-                                <li>Accept the dbt Cloud Invitation</li>
-                                <li>Login to Snowflake</li>
-                                <li>Create an empty repository in GitHub and send the link to your instructor</li>
+                            <h4>Before the Kickoff Meeting</h4>
+                            <ul>    
+                                <li>Join private Jumpstart slack channel in dbt Slack.</li>
+                                <li>Accept the dbt Cloud Invitation and Login to Snowflake.</li>
+                                <li>Create an empty repository in your personal GitHub account and send the link to your instructor.</li>
+                            </ul>
                             <h4>Kickoff Meeting</h4>
-                                <li> Introductions and Overview of the Jumpstart Program </li>
-                                <li> Q+A Session for Jumpstart Logistics</li>
+                            <ul>    
+                                <li> Introductions and Overview of the Jumpstart Program.</li>
+                                <li> Q+A Session for Jumpstart Logistics.</li>
+                            </ul>
                             <h4>Asynchronous Sessions</h4>
-                                <li>Watch Instructional Videos</li>
-                                <li>Complete Check for Understanding in Google Form</li>
-                                <li>Practice Exercises</li>
-                                <li>Post questions/roadblocks in the slack channel as you work</li>
-                                <li>Submit a PR to the Instructor</li>
+                            <ul>    
+                                <li>Watch Instructional Videos.</li>
+                                <li>Complete Check for Understanding in Google Form.</li>
+                                <li>Practice Exercises.</li>
+                            </ul>
                             <h4>Synchronous Sessions</h4>
-                                <li>Instructor reviews responses to Google Form and Practice Exercises</li>
-                                <li>Q+A Sessions on using dbt</li>
+                            <ul>    
+                                <li>Instructor reviews responses to Google Form and Practice Exercises.</li>
+                                <li>Q+A Sessions on using dbt.</li>
+                            </ul>
 				            </div>
    				</div>
    			</div>
@@ -248,6 +251,7 @@ week4_form: https://forms.gle/vxsWkvSpxcjnKXmy5
                             Materializations and Analyses + Seeds</li>
                         <li><a href="{{ page.week4_form }}" target="_blank">Week 4 Check for Understanding Form</a></li>
                         <li>Practice Exercises for Materializations and Analyses + Seeds</li>
+                        <li>Close out the course with final questions, feedback, and certificates.</li>
                     </ul>
                 </div>
             </div>
