--- a/jumpstart/index.html
+++ b/jumpstart/index.html
@@ -168,9 +168,9 @@ week4_form: https://forms.gle/vxsWkvSpxcjnKXmy5
                 <div class="col-md-12 text-large">
                     <ul>
                         <li><a href="{{ base_url }}/ondemand/43216f3592f37d744f7d544614a2f997a5739641/modules" target="_blank">Instructional Videos:</a>
-                            Who is an Analytics Engineer and Models</li>
-                        <li><a href="{{ page.week1_form }}" target="_blank">Week 1 Check for Understanding Form</a></li>
-                        <li>Practice Exercises for Models</li>
+                            Who is an Analytics Engineer and Models.</li>
+                        <li><a href="{{ page.week1_form }}" target="_blank">Week 1 Check for Understanding Form.</a></li>
+                        <li>Practice Exercises for Models.</li>
                     </ul>
                 </div>
             </div>
@@ -195,9 +195,9 @@ week4_form: https://forms.gle/vxsWkvSpxcjnKXmy5
                 <div class="col-md-12 text-large">
                     <ul>
                         <li><a href="{{ base_url }}/ondemand/43216f3592f37d744f7d544614a2f997a5739641/modules" target="_blank">Instructional Videos:</a>
-                            Tests, Docs, Sources, and Deployment</li>
-                        <li><a href="{{ page.week2_form }}" target="_blank">Week 2 Check for Understanding Form</a></li>
-                        <li>Practice Exercises for Tests, Docs, and Deployment</li>
+                            Tests, Docs, Sources, and Deployment.</li>
+                        <li><a href="{{ page.week2_form }}" target="_blank">Week 2 Check for Understanding Form.</a></li>
+                        <li>Practice Exercises for Tests, Docs, and Deployment.</li>
                     </ul>
                 </div>
             </div>
@@ -221,9 +221,9 @@ week4_form: https://forms.gle/vxsWkvSpxcjnKXmy5
             <div class="row">
                 <div class="col-md-12 text-large">
                     <ul>
-                        <li><a href="{{ base_url }}/ondemand/43216f3592f37d744f7d544614a2f997a5739641/modules" target="_blank">Instructional Videos:</a> Jinja Primer, Macros, and Packages</li>
-                        <li><a href="{{ page.week3_form }}" target="_blank">Week 3 Check for Understanding Form</a></li>
-                        <li>Practice Exercises for Jinja, Macros, and Packages</li>
+                        <li><a href="{{ base_url }}/ondemand/43216f3592f37d744f7d544614a2f997a5739641/modules" target="_blank">Instructional Videos:</a> Jinja Primer, Macros, and Packages.</li>
+                        <li><a href="{{ page.week3_form }}" target="_blank">Week 3 Check for Understanding Form.</a></li>
+                        <li>Practice Exercises for Jinja, Macros, and Packages.</li>
                     </ul>
                 </div>
             </div>
@@ -249,8 +249,8 @@ week4_form: https://forms.gle/vxsWkvSpxcjnKXmy5
                     <ul>
                         <li><a href="{{ base_url }}/ondemand/43216f3592f37d744f7d544614a2f997a5739641/modules" target="_blank">Instructional Videos:</a>
                             Materializations and Analyses + Seeds</li>
-                        <li><a href="{{ page.week4_form }}" target="_blank">Week 4 Check for Understanding Form</a></li>
-                        <li>Practice Exercises for Materializations and Analyses + Seeds</li>
+                        <li><a href="{{ page.week4_form }}" target="_blank">Week 4 Check for Understanding Form.</a></li>
+                        <li>Practice Exercises for Materializations and Analyses + Seeds.</li>
                         <li>Close out the course with final questions, feedback, and certificates.</li>
                     </ul>
                 </div>
