--- a/_jumpstart/kickoff.html
+++ b/_jumpstart/kickoff.html
@@ -33,7 +33,7 @@ Asynchronous Learn & Synchronous Review
 ## Asynchronous
 
 - Instructional Videos + Practice Exercises
-- Sumbmit Pull Request
+- Submit Pull Request
 - Check for Understanding
 ]
 
