Feature/add jumpstart page (#106)
* add Jumpstart landing page

* (temp) change all links to week 1 Google form

* adjust copy, fix list tags

* check copy for punctuation

* add kickoff presentation

* add pr_template

* refactor and relocate _jumpstart folder

* add intercome png

* update config file for jumpstart collection

* slight tweaks

--- a/_jumpstart/index.html
+++ b/_jumpstart/index.html
@@ -175,7 +175,9 @@ week4_form: https://forms.gle/nam1Z2VZ6nDbPu8z9
                     <ul>
                         <li><a href="pr_template.html" target="_blank">PR Template:</a> Add this pull request template to your dbt Project.</li>
                         <li><a href="{{ base_url }}/ondemand/43216f3592f37d744f7d544614a2f997a5739641/modules" target="_blank">Instructional Videos:</a>
-                            Who is an Analytics Engineer and Models.</li>
+
+                            Who is an Analytics Engineer, Setting up dbt Cloud, and Models.</li>
+
                         <li><strong>Submit Pull-Request:</strong> Practice Exercises for Models and submit a PR to your instructor with this template</li>
                         <li><a href="{{ page.week1_form }}" target="_blank">Week 1 Check for Understanding Form.</a></li>
                     </ul>
