Fixes from last Learn

--- a/_lessons/dbt-fundamentals.html
+++ b/_lessons/dbt-fundamentals.html
@@ -6,7 +6,7 @@ estimated_working_session: 60
 teaching_method: live demo + slides. Questions encouraged.
 learningObjectives:
   - Review the basics from the dbt Learn tutorial
-  - Explain models, test, materializations, and dependencies in the context of a dbt project
+  - Explain models, materializations, and dependencies in the context of a dbt project
 
 ---
 class: title, center, middle
@@ -36,7 +36,7 @@ select * from raw.jaffle_shop.customers
 ???
 Hopefully answers like:
 - clean up the data
-- create news fields
+- create new fields
 - build trust/test it
 - stop repeated work
 
@@ -452,4 +452,3 @@ Where did our data come from? How do we know that?
 When building your models:
 * What did you name the files?
 * How did you organize them in your models directory?
-* Did you test these models? Did you document them?
