--- a/_lessons/docs.html
+++ b/_lessons/docs.html
@@ -271,11 +271,7 @@ class: subtitle
 
 ## Checkpoint
 
-- **Share out:** How is your organization currently documenting your analytics workflow?
-
---
-
-- What are some elements of dbt documentation that you are excited to implement and why?
+- **Share out:** What are some elements of dbt documentation that you are excited to implement and why?
 
 ---
 
