--- a/_jumpstart/index.html
+++ b/_jumpstart/index.html
@@ -173,11 +173,9 @@ week4_form: https://forms.gle/nam1Z2VZ6nDbPu8z9
             <div class="row">
                 <div class="col-md-12 text-large">
                     <ul>
-                        <li><a href="pr_template.html" target="_blank">PR Template:</a> Add this pull request template to your dbt Project.</li>
-                        <li><a href="{{ base_url }}/ondemand/43216f3592f37d744f7d544614a2f997a5739641/modules" target="_blank">Instructional Videos:</a>
-
-                            Who is an Analytics Engineer, Setting up dbt Cloud, and Models.</li>
-
+                        <li><a href="{{ base_url }}/ondemand/43216f3592f37d744f7d544614a2f997a5739641/modules" target="_blank"> Start Instructional Videos:</a> Who is an Analytics Engineer & Setting up dbt Cloud</li>
+                        <li><a href="pr_template.html" target="_blank">PR Template:</a> Add this pull request template to your dbt Project. (<a href="https://dbtlearn.wistia.com/medias/cig522rdkv" target="_blank">video walkthrough</a>)</li>
+                        <li><a href="{{ base_url }}/ondemand/43216f3592f37d744f7d544614a2f997a5739641/modules" target="_blank"> Continue Instructional Videos:</a> Models.</li>
                         <li><strong>Submit Pull-Request:</strong> Practice Exercises for Models and submit a PR to your instructor with this template</li>
                         <li><a href="{{ page.week1_form }}" target="_blank">Week 1 Check for Understanding Form.</a></li>
                     </ul>
